@@ -22,6 +22,8 @@
 	* Fix an error in the popup system
 	* Class select : getSelection work !
 	* Class select : isSelectionEdit implemented
+	* Class select : setSelection implemented
+	* Class select is finished !
 
 2007-03-03  Maximilien Cuony
 	* Implementation of firegpgGPG.listkey(private)
